-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.5.0-rc1
-
Ubuntu 12.04 32bit, OSX 10.10, QC 3.5 rc (based on Qt5.5)
Steps to reproduce:
- create Qt Quick Application from template (, >= Qt5.4, check the 'with ui.qml file')
- double click on the created ui.qml file
- QC switches to Design mode
- switch back to Edit mode
- QC should display a warning regarding 'file should only get edited in Design mode' (but anyhow: ui.qml files are likely to get edited manually as well)
- click the Split Window icon and / or the Split Window Side by Side
- start editing something inside any of the editors
- the warning mentioned above is added again to all editors
- if you opened 2 additional editors you'll get the warning twice in all respective editors
| For Gerrit Dashboard: QTCREATORBUG-14923 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 123555,3 | QML/JS: Fix that warnings about editing .ui.qml files accumulated | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |