QML/JS: Fix that warnings about editing .ui.qml files accumulated

Splitting the editor would add the warning again. Since the warning is a
document property, handle it in the document instead of the widgets.

Change-Id: Ie20377b05dee14983f7ff46ba04ed2af2b737c96
Task-number: QTCREATORBUG-14923
Reviewed-by: Marco Benelli <marco.benelli@theqtcompany.com>
Reviewed-by: Thomas Hartmann <Thomas.Hartmann@digia.com>